Fixed letter spacing abnormalities

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ ol,
 ul {
     width: 70%;
     line-height: 1.3;
-    letter-spacing: 0.03rem;
+    letter-spacing: 1px;
 }
 
 .text-container {
